--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practica 2</title>
 </head>
 <body>
-    <h1>holaaaaaaaaaaaaaaaaaaaaaaaa</h1>
-    <h1>BOCAAAAAAAAA</h1>
-    <h2>funciona?</h2>
-    <h3>ahora si</h3>
+
 </body>
 </html>
