--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Perfil</a>
+                <a class="nav-link " aria-current="page" href="#">Perfil</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Estudios</a>
@@ -40,6 +40,18 @@
         </div>
       </nav>
 </header>
+<main>
+    <h2>Perfil</h2>
+    <p> Hola  soy Alfredo Agüero Ortiz, de la provincia de San Juan soy Desarrollador Web Fullstack . 
+        Actualmente estoy haciendo una capacitacion en programacion fullstack gracias a la fundación Pescar y estudiando  la Tec en programacion en la Universidad Nacional de San Juan
+        Tengo conocimientos en lenguajes: Java y JavaScript. Manejo de Frameworks: Spring, Vue.JS, React Bootstrap entre otros.
+        Eh trabajado en distintos proyectos tanto personales como grupales desarrollándome tanto en el rol de front-end , back-end como full stack.
+        Soy un eterno autodidacta al que le apasiona la música clásica, gaming ,viajar y leer.
+        Busco siempre un constantemente un crecimiento profesional, disfruto de los cambios ,de los desafíos intelectuales, del aprendizaje y de las nuevas tecnologías.
+        Gracias por leer mi breve descripción cualquier consulta puedes escribirme a mi correo  
+        alfreagor@gmail.com 
+        Saludos!</p>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
