--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         Gracias por leer mi breve descripción cualquier consulta puedes escribirme a mi correo  
         alfreagor@gmail.com 
         Saludos!</p>
+        <h2>Estudios</h2>
+        <p> 
+        Tecnicatura en Programacion Universidad Nacional de San Juan (2024-actualidad)         
+        Valtech-Fundacion Karuna -Fundacion Pescar Desarrollo full stack 2024 (300 hs)
+        Mindhub Bootcamp Programador full stack 2022-2023
+        Telecom - Bootcamp Digitalers Junio 2023 - Noviembre 2023 (130 hs)
+        Google-Coursera Diseño Ux 240 hs (junio 2024-Actualidad)
+        Google-Coursera Project Manager 156 hs (julio 2024-Actualidad)
+        Egg Cooperation-Programacion desde cero (Junio 2023)
+        </p>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
