--- a/index.html
+++ b/index.html
@@ -52,15 +52,38 @@
         alfreagor@gmail.com 
         Saludos!</p>
         <h2>Estudios</h2>
-        <p> 
-        Tecnicatura en Programacion Universidad Nacional de San Juan (2024-actualidad)         
+        <p> Tecnicatura en Programacion Universidad Nacional de San Juan (2024-actualidad)         
         Valtech-Fundacion Karuna -Fundacion Pescar Desarrollo full stack 2024 (300 hs)
         Mindhub Bootcamp Programador full stack 2022-2023
         Telecom - Bootcamp Digitalers Junio 2023 - Noviembre 2023 (130 hs)
         Google-Coursera Diseño Ux 240 hs (junio 2024-Actualidad)
         Google-Coursera Project Manager 156 hs (julio 2024-Actualidad)
-        Egg Cooperation-Programacion desde cero (Junio 2023)
-        </p>
+        Egg Cooperation-Programacion desde cero (Junio 2023)</p>
+        <h2>Experiencias</h2>
+        <p>E-COMMERCE GOLF PARADISE 2023: 
+            Front-end(disposición y diseño)
+            Creación de una aplicación de comercio electrónico con
+            amplias funcionalidades en lenguaje JAVA como backend,
+            con su framework Spring, Javascript como frontend, con su
+            framework VUE JS y también HTML</p>
+           
+            <p>HOMEBANKING-MINDBANK 2023:
+                Desempeño en Front y Backend
+                Desarrollo de una página de homebanking con amplias
+                funcionalidades en lenguaje JAVA, con su framework
+                Spring, Javascript como frontend, con su framework VUE
+                JS, HTML y CSS.</p>
+                
+                <p>MINDHUB E-COMMERCE 2023:
+                    Proyecto grupal donde se desarrolló un e-commerce donde
+                    se utilizaron tecnologías, Javascript como frontend, con su
+                    framework VUE JS, HTML y CSS.</p>
+
+                    <p>APP AMAZING EVENTS 2022:
+                        Proyecto individual donde se desarrolló una aplicación
+                        simulando una agencia de turismo donde encontramos
+                        diferentes eventos donde se utilizaron las siguientes
+                        tecnologías VUE JS, HTML, CSS, Axios y Bootstrap.</p>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
