--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         Google-Coursera Diseño Ux 240 hs (junio 2024-Actualidad)
         Google-Coursera Project Manager 156 hs (julio 2024-Actualidad)
         Egg Cooperation-Programacion desde cero (Junio 2023)</p>
-        <h2>Experiencias</h2>
+        
+        0<h2>Experiencias</h2>
         <p>E-COMMERCE GOLF PARADISE 2023: 
             Front-end(disposición y diseño)
             Creación de una aplicación de comercio electrónico con
