--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         Google-Coursera Project Manager 156 hs (julio 2024-Actualidad)
         Egg Cooperation-Programacion desde cero (Junio 2023)</p>
         
-        0<h2>Experiencias</h2>
+        <h2>Experiencias</h2>
         <p>E-COMMERCE GOLF PARADISE 2023: 
             Front-end(disposición y diseño)
             Creación de una aplicación de comercio electrónico con
