--- a/index.html
+++ b/index.html
@@ -89,7 +89,21 @@
                         tecnologías VUE JS, HTML, CSS, Axios y Bootstrap.</p>
 
                         <h2>Idiomas</h2>
-                        <p>Ingles C1 /br Aleman A1</p>
+                        <p>Ingles C1</p>
+                        <p>Aleman A1</p>
+
+                        <H3>ESCRIBIME</H3>
+
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Direccion de email</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                          </div>
+                          <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                          </div>
+                          <button>Enviar</button>
+                          <button>Eliminar</button>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
