--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
 </nav>
 </header>
 <main>
-
-    <h2>Perfil</h2>
-    <p> Hola  soy Alfredo Agüero Ortiz, de la provincia de San Juan soy Desarrollador Web Fullstack...</p>
+<section >
+  <h2>Perfil</h2>
+  <div class="perfil">
+    <p class="ptexto"> 🖐 Hola  soy Alfredo Agüero Ortiz, de la provincia de San Juan soy Desarrollador Web Fullstack . 😎
+Actualmente estoy haciendo una capacitacion en programacion fullstack gracias a la fundación Pescar y estudiando  la Tec en programacion en la Universidad Nacional de San Juan
+Tengo conocimientos en lenguajes: Java y JavaScript. Manejo de Frameworks: Spring, Vue.JS, React Bootstrap entre otros.
+Eh trabajado en distintos proyectos tanto personales como grupales desarrollándome tanto en el rol de front-end , back-end como full stack.
+Soy un eterno autodidacta al que le apasiona la música clásica, gaming ,viajar y leer.🎻
+Busco siempre un constantemente un crecimiento profesional, disfruto de los cambios ,de los desafíos intelectuales, del aprendizaje y de las nuevas tecnologías.</p>
+<img class="foto" src="./assets/IMG_20230810_220312_402.jpg" alt="" srcset="">
+  </div>
+</section>
     <section id="estudios">
       <h2>Estudios</h2>
       <p> Tecnicatura en Programación Universidad Nacional de San Juan...</p>
