--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 </nav>
 </header>
 <main>
-<section >
-  <h2>Perfil</h2>
+<section  class="perfil1">
   <div class="perfil">
     <p class="ptexto"> 🖐 Hola  soy Alfredo Agüero Ortiz, de la provincia de San Juan soy Desarrollador Web Fullstack . 😎
 Actualmente estoy haciendo una capacitacion en programacion fullstack gracias a la fundación Pescar y estudiando  la Tec en programacion en la Universidad Nacional de San Juan
