--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
 <body>
 <header>
 <nav>
-  <a href="">Perfil</a>
-  <a href="#estudios">Estudios</a>
-  <a href="#experiencia">Experiencia</a>
-  <a href="#tecnologias">Tecnologias</a>
-  <a href="#herramientas">Herramientas</a>
+
+  <a href="#estudios"><button>
+    Estudios
+  </button></a>
+  <a href="#experiencia"><button>
+    Experiencia
+  </button></a>
+  <a href="#tecnologias"><button>
+    Tecnologias
+  </button></a>
+  <a href="#herramientas"><button>
+    Herramientas
+  </button></a>
 </nav>
 </header>
 <main>
