--- a/index.html
+++ b/index.html
@@ -42,7 +42,17 @@ Busco siempre un constantemente un crecimiento profesional, disfruto de los camb
 </section>
     <section id="estudios">
       <h2>Estudios</h2>
-      <p> Tecnicatura en Programación Universidad Nacional de San Juan...</p>
+      <p>Tecnicatura en Programacion Universidad Nacional de
+        San Juan (2024-actualidad)</p>
+      <p>Google-Coursera Diseño Ux 240 hs (junio 2024-Actualidad)</p>
+      <p>Google-Coursera Project Manager 156 hs ( julio 2024-Actualidad)</p>
+      <p>Valtech-Fundacion Karuna -Fundacion Pescar
+        Desarrollo full stack 2024 (300 hs)</p>
+      <p>Telecom - Bootcamp Digitalers Junio 2023 - Noviembre
+          2023 (130 hs)</p>
+          <p>Codo a Codo 4.0-Desarrollo web (javascrip-nodejs-200 horas)</p>
+          <p>Mindhub Bootcamp Programador full stack 2022-
+            2023</p>
     </section>
 
     <section id="experiencia">
