barra de iconos

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -63,8 +63,12 @@
           Tecnicatura en Programacion Universidad Nacional de San Juan
           (2024-actualidad)
         </p>
-        <p data-aos="fade-left">Google-Coursera Diseño Ux 240 hs (junio 2024-Actualidad)</p>
-        <p data-aos="fade-right">Google-Coursera Project Manager 156 hs ( julio 2024-Actualidad)</p>
+        <p data-aos="fade-left">
+          Google-Coursera Diseño Ux 240 hs (junio 2024-Actualidad)
+        </p>
+        <p data-aos="fade-right">
+          Google-Coursera Project Manager 156 hs ( julio 2024-Actualidad)
+        </p>
         <p data-aos="fade-left">
           Valtech-Fundacion Karuna -Fundacion Pescar Desarrollo full stack 2024
           (300 hs)
@@ -72,8 +76,12 @@
         <p data-aos="fade-right">
           Telecom - Bootcamp Digitalers Junio 2023 - Noviembre 2023 (130 hs)
         </p>
-        <p data-aos="fade-left">Codo a Codo 4.0-Desarrollo web (javascrip-nodejs-200 horas)</p>
-        <p data-aos="fade-right">Mindhub Bootcamp Programador full stack 2022- 2023</p>
+        <p data-aos="fade-left">
+          Codo a Codo 4.0-Desarrollo web (javascrip-nodejs-200 horas)
+        </p>
+        <p data-aos="fade-right">
+          Mindhub Bootcamp Programador full stack 2022- 2023
+        </p>
       </section>
 
       <section id="experiencia">
@@ -132,8 +140,53 @@
       </section>
 
       <section id="tecnologias">
-        <h2>Tecnologías</h2>
-        <p>JavaScript, React, Vue.js, Bootstrap...</p>
+        <h2>Tecnologias</h2>
+        <div class="slider">
+          <div class="slide-track">
+            <div class="slide">
+              <img src="./assets/icons8-c-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-css-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-html-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-java-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-node-js-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-react-80.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-angular-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-c-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-css-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-html-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-java-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-node-js-96.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-react-80.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./assets/icons8-angular-96.png" alt="" />
+            </div>
+          </div>
+        </div>
       </section>
       <section id="herramientas">
         <h2>Herramientas</h2>
