--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
       </section>
 
       <section id="experiencia">
-        <h2>Experiencia</h2>
-        <div class="tarjetero">
-          <div class="card" style="width: 18rem">
-            <div class="card-body">
+        <h2 data-aos="zoom-in-down">Experiencia</h2>
+        <div class="tarjetero ">
+          <div class="card " style="width: 18rem">
+            <div class="card-body ">
               <h5 class="card-title">E-COMMERCE GOLF PARADISE</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">2023</h6>
               <p class="card-text">
@@ -190,7 +190,12 @@
       </section>
       <section id="herramientas">
         <h2>Herramientas</h2>
-        <p>Git, Docker, Jenkins...</p>
+        <p>Git & GitHub
+          Trello
+          Canva
+          Figma
+          Notion
+          Framer</p>
 
         <h2>Idiomas</h2>
         <p>Inglés C1</p>
