--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </section>
 
       <section id="tecnologias">
-        <h2>Tecnologias</h2>
+        <h2 data-aos="zoom-in-down">Tecnologias</h2>
         <div class="slider">
           <div class="slide-track">
             <div class="slide">
@@ -189,43 +189,42 @@
         </div>
       </section>
       <section id="herramientas">
-        <h2>Herramientas</h2>
+        <h2 data-aos="zoom-in-down">Herramientas</h2>
         <p>Git & GitHub
           Trello
           Canva
           Figma
           Notion
           Framer</p>
-
-        <h2>Idiomas</h2>
-        <p>Inglés C1</p>
-        <p>Alemán A1</p>
       </section>
 
-      <h3>Escríbeme</h3>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label"
-          >Dirección de email</label
-        >
-        <input
-          type="email"
-          class="form-control"
-          id="exampleFormControlInput1"
-          placeholder="name@example.com"
-        />
+      <h2>Escríbeme</h3>
+      <div class="formulario">
+
+        <div class="mb-3" style="width: 80%">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Dirección de email</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="name@example.com"
+          />
+        </div>
+        <div class="mb-3" style="width: 80%">
+          <label for="exampleFormControlTextarea1" class="form-label"
+            >Mensaje</label
+          >
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+          ></textarea>
+        </div>
+        <button>Enviar</button>
+        <button>Eliminar</button>
       </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label"
-          >Mensaje</label
-        >
-        <textarea
-          class="form-control"
-          id="exampleFormControlTextarea1"
-          rows="3"
-        ></textarea>
-      </div>
-      <button>Enviar</button>
-      <button>Eliminar</button>
     </main>
 
     <script
