--- a/index.html
+++ b/index.html
@@ -226,7 +226,19 @@
         <button>Eliminar</button>
       </div>
     </main>
-
+    <footer>
+      <div class="footer-container">
+        <div class="social-links">
+          <a href="https://github.com/tu-usuario" target="_blank">GitHub</a>
+          <a href="https://linkedin.com/in/tu-usuario" target="_blank">LinkedIn</a>
+          <a href="https://twitter.com/tu-usuario" target="_blank">Twitter</a>
+        </div>
+        <div class="footer-info">
+          <p>&copy; 2024 Grupo 4 intro a desarrollo web. Todos los derechos reservados.</p>
+        </div>
+      </div>
+    </footer>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
