--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
       <section class="perfil1">
         <div class="perfil">
           <p class="ptexto animate__animated animate__slideInLeft">
-            🖐 Hola soy Alfredo Agüero Ortiz, de la provincia de San Juan soy
-            Desarrollador Web Fullstack . 😎 Actualmente estoy haciendo una
+            🖐 Hola soy Alfredo Agüero Ortiz, Desarrollador Web Fullstack de la
+            provincia de San Juan. 😎 Actualmente estoy haciendo una
             capacitacion en programacion fullstack gracias a la fundación Pescar
-            y estudiando la Tec en programacion en la Universidad Nacional de
-            San Juan Tengo conocimientos en lenguajes: Java y JavaScript. Manejo
-            de Frameworks: Spring, Vue.JS, React Bootstrap entre otros. Eh
+            y estudiando la Tecnicatura en programacion en la Universidad Nacional de
+            San Juan, tengo conocimientos en lenguajes: Java y JavaScript. Manejo
+            de Frameworks: Spring, Vue.JS, React Bootstrap entre otros. gHe
             trabajado en distintos proyectos tanto personales como grupales
             desarrollándome tanto en el rol de front-end , back-end como full
             stack. Soy un eterno autodidacta al que le apasiona la música
-            clásica, gaming ,viajar y leer.🎻 Busco siempre un constantemente un
-            crecimiento profesional, disfruto de los cambios ,de los desafíos
+            clásica, gaming ,viajar y leer.🎻 Busco constantemente
+            crecer de manera profesional, disfruto de los cambios ,de los desafíos
             intelectuales, del aprendizaje y de las nuevas tecnologías.
           </p>
           <img
